...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".controller.main.profile.PatientProfile"
    android:id="@+id/PatientProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:rotationY="@integer/angle_rtl_180"/>


        <ImageView
            android:id="@+id/edit_profile_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
        <TextView
            android:id="@+id/EditImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:src="@drawable/defaultpic"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toTopOf="@+id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/full_name"
...
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/emailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat"
        android:text="email@email.com"
        android:textColor="#515C6F"
...
                android:paddingStart="10dp"
                android:text="@string/my_information"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/go_to1"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

...
                android:paddingStart="10dp"
                android:text="@string/MyDoc"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/doctor_text2"
                android:layout_width="148dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
...
                android:textAlignment="textEnd"
                android:textColor="#66515C6F"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/go_to2"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

...
                android:paddingStart="10dp"
                android:text="@string/google_calendar"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:text="@string/disabled"
                android:textAlignment="textEnd"
                android:textColor="#66515C6F"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/go_to3"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

        </LinearLayout>


        <Button
            android:id="@+id/log_out_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat"
...
