...

    <!-- Edit Profile Page -->
    <string name="ChooseImage">Choose Image</string>
    <string name="OldPassET">Old Password</string>
    <string name="NewPassET">New Password</string>
    <string name="CNPassET">Confirm New password</string>
    <string name="ForgetPassSuccess">Reset Password was sent to Your Email Successfully</string>
    <string name="ForgetPassFialed">Try Again, Reset Password did not sent</string>
    <string name="EmptyName">Name Should not be Empty</string>
    <string name="NotCorrectName">* Enter valid name.</string>
    <string name="UpdateNameSuccess">Your Name Updated Successfully</string>
    <string name="UpdateNameFialed">Your Name did not Updated, Try Again</string>
    <string name="ImageUpSuccess">Your Image Profile Updated Successfully</string>
    <string name="SelectPicture">Select Image</string>
...
    <!-- Patient Profile Page -->
    <string name="VervEmail">To Help Ensure Your Accounts Security Please Verify Your Email.</string>
    <string name="VervEmailSuccess">Email Was Sent For Verification</string>
    <string name="VervEmailFialed">Email Did Not Sent, Try Again</string>
    <string name="NoDoc">No Doctor</string>
    <string name="LogOut">Log Out</string>
    <string name="LogOutMsg">
        Are You Sure You Want To Logout ?
    </string>
    <string name="LogOutOK">Logout</string>
    <string name="LogOutCancle">Cancel</string>
    <string name="LogOutSuccess">Your are Logged Out Successfully</string>
    <string name="LogOutFialed">Something Wrong, Try Again</string>

    <!-- Log in Page -->
    <string name="ForgetPass">Reset Password</string>
    <string name="ForgetPassMessage">
        If You Do not Know Your Current Password,
        You may Change it.
        Please Enter Your Email
    </string>
    <string name="ForgetPassOK">Request New Password</string>
    <string name="ForgetPassCancle">Cancel</string>
    <string name="EmptyEmail">Email Should not be Empty</string>
    <string name="NotCorrectEmail">Please, Enter Your Email Correctly.</string>
    <string name="NoUser">* There is not User With this Email, Please Try Again!</string>
    <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>

    <!-- Suign up Page -->
    <string name="NotValidName">* Enter valid name.</string>
    <string name="NotValidEmail">* Enter valid email.</string>
...
